--- a/main.html
+++ b/main.html
@@ -1,226 +1,368 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>WhitePEAK Portal</title>
-<style>
-/* Reset */
-*{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
-body{background:linear-gradient(135deg,#0f0f0f,#1c1c1c);color:white;min-height:100vh;display:flex;flex-direction:column;transition:background 0.5s,color 0.5s;}
-header{display:flex;justify-content:space-between;align-items:center;padding:15px 25px;background:rgba(0,0,0,0.9);box-shadow:0 2px 10px rgba(255,255,255,0.1);position:sticky;top:0;z-index:1000;}
-header img{height:45px;width:auto;border-radius:10px;}
-header .center-text{text-align:center;flex-grow:1;}
-header h1{font-size:18px;font-weight:600;color:#f5f5f5;margin-bottom:5px;}
-header p{font-size:12px;color:#bbb;font-style:italic;}
-.toggle-container{display:flex;align-items:center;gap:10px;}
-.toggle-container label{font-size:13px;color:#ccc;}
-.toggle{width:40px;height:20px;background:#444;border-radius:20px;position:relative;cursor:pointer;transition:background 0.3s;}
-.toggle::before{content:"";position:absolute;top:2px;left:2px;width:16px;height:16px;background:white;border-radius:50%;transition:transform 0.3s;}
-.toggle.active{background:#4ea3ff;}
-.toggle.active::before{transform:translateX(20px);}
-#loggedInUser{font-size:14px;color:#ccc;font-style:italic;}
-.signout-btn{background:#e53935;color:white;padding:6px 10px;border:none;border-radius:8px;cursor:pointer;font-weight:bold;transition:0.3s;}
-.signout-btn:hover{background:#c62828;}
-main{flex-grow:1;width:100%;padding:20px;display:flex;flex-direction:column;align-items:center;position:relative;}
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>WhitePEAK Portal</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: "Poppins", sans-serif;
+    }
 
-/* Welcome Animation */
-.welcome-container{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);text-align:center;z-index:500;}
-.welcome-text{font-size:36px;font-weight:bold;color:#ffffff;text-align:center;animation:welcomeMove 3s forwards;}
-@keyframes welcomeMove{
-  0%{opacity:0;transform:translate(-50%,-50%) scale(1);}
-  20%{opacity:1;transform:translate(-50%,-50%) scale(1);}
-  100%{opacity:0;transform:translate(-50%,-150%) scale(0.9);}
-}
+    body {
+      background: linear-gradient(135deg, #0f0f0f, #1c1c1c);
+      color: white;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      transition: background 0.5s, color 0.5s;
+    }
 
-/* Sections */
-.content-sections{display:flex;flex-direction:column;align-items:center;margin-top:60px;opacity:0;transition:opacity 1s ease;width:100%;max-width:1000px;}
-.section{width:90%;margin:30px 0;padding:20px;border-radius:15px;border:1px solid rgba(255,255,255,0.2);transition:all 0.5s;}
-.section h2{font-size:24px;margin-bottom:20px;}
-.section .pdf-space{min-height:120px;border:1px dashed rgba(255,255,255,0.2);border-radius:10px;display:flex;justify-content:center;align-items:center;color:#888;}
-.section:hover{border-color:#4ea3ff;background:rgba(78,163,255,0.1);}
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 25px;
+      background: rgba(0, 0, 0, 0.9);
+      box-shadow: 0 2px 10px rgba(255, 255, 255, 0.1);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
 
-/* Events Section */
-.events-section{width:90%;background:rgba(78,163,255,0.1);border:2px solid #4ea3ff;border-radius:20px;padding:40px;text-align:center;color:#ccc;font-size:20px;margin:50px 0;opacity:0;transform:translateY(50px);transition:all 1s ease;}
+    header img {
+      height: 45px;
+      border-radius: 10px;
+    }
 
-/* Community Chat */
-.chat-section{width:90%;max-width:1000px;border:2px solid #4ea3ff;border-radius:15px;background:rgba(0,0,0,0.8);padding:20px;margin-bottom:50px;color:#fff;}
-.chat-section h2{margin-bottom:10px;}
-.chat-messages{max-height:300px;overflow-y:auto;border:1px solid rgba(255,255,255,0.2);border-radius:10px;padding:10px;margin-bottom:10px;background:rgba(0,0,0,0.6);display:flex;flex-direction:column;}
-.chat-message{margin-bottom:8px;word-wrap: break-word;}
-.chat-message span.username{font-weight:bold;margin-right:5px;}
-.chat-message.shreyam span.username,
-.chat-message.saksham span.username{
-  color:#ffd700;text-shadow:0 0 5px #ffd700;
-}
-.chat-message.shreyam span.username::after,
-.chat-message.saksham span.username::after{content:" (DEV)";font-weight:bold;color:#ffea00;}
+    .center-text {
+      text-align: center;
+      flex-grow: 1;
+    }
 
-/* Chat Input */
-.chat-input-container{display:flex;gap:10px;}
-.chat-input-container input{flex:1;padding:8px;border-radius:8px;border:none;outline:none;}
-.chat-input-container button{padding:8px 15px;border:none;border-radius:8px;background:#4ea3ff;color:white;cursor:pointer;font-weight:bold;}
-.chat-input-container button:hover{background:#357ab7;}
+    .center-text h1 {
+      font-size: 18px;
+      font-weight: 600;
+      color: #f5f5f5;
+      margin-bottom: 5px;
+    }
 
-/* Light Mode */
-.light-mode{background:#f5f5f5;color:#222;}
-.light-mode header{background:#e0e0e0;color:#222;}
-.light-mode header h1, .light-mode header p{color:#222;}
-.light-mode .section{border-color:rgba(0,0,0,0.2);background:rgba(0,0,0,0.05);color:#222;}
-.light-mode .section:hover{background:rgba(78,163,255,0.2);color:#222;border-color:#4ea3ff;}
-.light-mode .events-section{color:#222;border-color:#4ea3ff;background:rgba(78,163,255,0.05);}
-.light-mode .events-section:hover{background:rgba(78,163,255,0.2);color:#222;}
-.light-mode .chat-section{background:rgba(255,255,255,0.9);color:#222;}
-.light-mode .chat-messages{background:rgba(255,255,255,0.7);color:#222;}
-.light-mode .chat-input-container button{background:#4ea3ff;color:#fff;}
+    .center-text p {
+      font-size: 12px;
+      color: #bbb;
+      font-style: italic;
+    }
 
-@media(max-width:800px){.section,.chat-section{width:95%;}}
-footer{background:rgba(0,0,0,0.9);color:#bbb;text-align:center;padding:15px;font-size:14px;border-top:1px solid rgba(255,255,255,0.1);}
-footer a{color:#4ea3ff;text-decoration:none;}
-footer a:hover{text-decoration:underline;}
-</style>
+    .toggle-container {
+      display: flex;
+      align-items: center;
+      gap: 6px;
+    }
+
+    .toggle {
+      width: 40px;
+      height: 20px;
+      background: #444;
+      border-radius: 20px;
+      position: relative;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    .toggle::before {
+      content: "";
+      position: absolute;
+      top: 2px;
+      left: 2px;
+      width: 16px;
+      height: 16px;
+      background: white;
+      border-radius: 50%;
+      transition: transform 0.3s;
+    }
+
+    .toggle.active {
+      background: #4ea3ff;
+    }
+
+    .toggle.active::before {
+      transform: translateX(20px);
+    }
+
+    .signout-btn {
+      background: #ff4e4e;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      padding: 5px 12px;
+      cursor: pointer;
+      font-size: 14px;
+      margin-left: 10px;
+      transition: background 0.3s;
+    }
+
+    .signout-btn:hover {
+      background: #ff6b6b;
+    }
+
+    main {
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      padding: 40px 20px;
+    }
+
+    .welcome-text {
+      font-size: 26px;
+      font-weight: bold;
+      animation: fadeMoveUp 3s ease-in-out forwards;
+    }
+
+    @keyframes fadeMoveUp {
+      0% { opacity: 0; transform: translateY(20px); }
+      50% { opacity: 1; transform: translateY(0); }
+      100% { opacity: 0; transform: translateY(-60px); }
+    }
+
+    .sections {
+      opacity: 0;
+      transform: translateY(50px);
+      animation: showSections 3s ease-in-out 3s forwards;
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+      width: 100%;
+      max-width: 800px;
+    }
+
+    @keyframes showSections {
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    section {
+      background: rgba(255, 255, 255, 0.05);
+      padding: 20px;
+      border-radius: 15px;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+    }
+
+    section h2 {
+      font-size: 20px;
+      margin-bottom: 10px;
+      font-weight: 600;
+    }
+
+    #community-chat {
+      margin-bottom: 50px;
+    }
+
+    #chat-messages {
+      max-height: 250px;
+      overflow-y: auto;
+      padding: 10px;
+      background: rgba(255, 255, 255, 0.05);
+      border-radius: 10px;
+      text-align: left;
+    }
+
+    .chat-message {
+      margin-bottom: 6px;
+    }
+
+    .chat-message strong {
+      color: #4ea3ff;
+    }
+
+    .chat-message.dev strong {
+      color: #ffd700;
+    }
+
+    #chat-form {
+      margin-top: 10px;
+      display: flex;
+      gap: 10px;
+    }
+
+    #chat-input {
+      flex-grow: 1;
+      padding: 8px;
+      border-radius: 8px;
+      border: none;
+      outline: none;
+    }
+
+    #chat-form button {
+      padding: 8px 15px;
+      border: none;
+      background: #4ea3ff;
+      color: white;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+
+    footer {
+      background: rgba(0, 0, 0, 0.9);
+      color: #bbb;
+      text-align: center;
+      padding: 15px;
+      font-size: 14px;
+      border-top: 1px solid rgba(255, 255, 255, 0.1);
+    }
+
+    .light-mode {
+      background: #f5f5f5;
+      color: #222;
+    }
+
+    .light-mode header {
+      background: #e0e0e0;
+    }
+
+    .light-mode section {
+      background: #fff;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .light-mode #chat-messages {
+      background: #eee;
+    }
+
+    .light-mode footer {
+      background: #e0e0e0;
+      color: #222;
+    }
+
+  </style>
 </head>
 <body>
-
-<!-- HEADER -->
-<header>
-<img src="LOGO.jpg.png" alt="WhitePEAK Logo">
-<div class="center-text">
-<h1>WhitePEAK Portal</h1>
-<p>NOTHING YOU NEED TO REMEMBER</p>
-</div>
-<div class="toggle-container">
-<label id="toggleLabel">Light</label>
-<div class="toggle" id="themeToggle"></div>
-<span id="loggedInUser">Logged in as: </span>
-<button class="signout-btn" onclick="signOut()">Sign Out</button>
-</div>
-</header>
-
-<!-- Welcome Animation -->
-<div class="welcome-container">
-<div class="welcome-text">Welcome to WhitePEAK Portal</div>
-</div>
-
-<!-- MAIN CONTENT -->
-<main class="content-sections" id="contentSections">
-  <div class="section">
-    <h2>Class Work</h2>
-    <div class="pdf-space">Space for PDFs/Resources</div>
-  </div>
-  <div class="section">
-    <h2>Home Work</h2>
-    <div class="pdf-space">Space for PDFs/Resources</div>
-  </div>
-  <div class="section">
-    <h2>Assignments</h2>
-    <div class="pdf-space">Space for PDFs/Resources</div>
-  </div>
-
-  <div class="events-section" id="eventsSection">
-    <h2>Events</h2>
-    <p>Oops, nothing to see here right now</p>
-  </div>
-
-  <!-- Community Chat Section -->
-  <div class="chat-section">
-    <h2>Community Chat</h2>
-    <div class="chat-messages" id="chatMessages"></div>
-    <div class="chat-input-container">
-      <input type="text" id="chatInput" placeholder="Type a message...">
-      <button onclick="sendMessage()">Send</button>
+  <header>
+    <img src="LOGO.jpg.png" alt="WhitePEAK Logo" />
+    <div class="center-text">
+      <h1>NOTHING YOU NEED TO REMEMBER</h1>
+      <p>Logged in as <strong id="username-display"></strong></p>
     </div>
-  </div>
-</main>
+    <div class="toggle-container">
+      <div class="toggle" id="themeToggle"></div>
+      <button class="signout-btn" onclick="signOut()">Sign Out</button>
+    </div>
+  </header>
 
-<!-- FOOTER -->
-<footer>
-<p>© 2025 WhitePEAK Productions — All Rights Reserved.</p>
-<p>Founder & Developer: <strong>Shreyam Sharma & Saksham Kumar</strong></p>
-<p>For any problem, contact us at 
-<a href="mailto:whitepeakproductions9811@gmail.com">
-whitepeakproductions9811@gmail.com
-</a>
-</p>
-</footer>
+  <main>
+    <div class="welcome-text" id="welcome-text">Welcome to WhitePEAK Portal</div>
 
-<!-- Scripts -->
-<script>
-const toggle = document.getElementById('themeToggle');
-const toggleLabel = document.getElementById('toggleLabel');
-const loggedInUserSpan = document.getElementById('loggedInUser');
-const chatMessages = document.getElementById('chatMessages');
-const chatInput = document.getElementById('chatInput');
+    <div class="sections">
+      <section>
+        <h2>Class Work</h2>
+        <p>Upload or view classwork files here.</p>
+      </section>
+      <section>
+        <h2>Home Work</h2>
+        <p>Upload or view homework assignments here.</p>
+      </section>
+      <section>
+        <h2>Assignments</h2>
+        <p>Upload or view assignment materials here.</p>
+      </section>
+      <section>
+        <h2>Events</h2>
+        <p>Oops, nothing to see here right now.</p>
+      </section>
 
-// Logged in user
-const savedName = localStorage.getItem('savedName');
-loggedInUserSpan.textContent = savedName ? "Logged in as: " + savedName : "Logged in as: Guest";
+      <section id="community-chat">
+        <h2>Community Chat</h2>
+        <div id="chat-messages"></div>
+        <form id="chat-form">
+          <input id="chat-input" type="text" placeholder="Type a message..." />
+          <button type="submit">Send</button>
+        </form>
+      </section>
+    </div>
+  </main>
 
-// Toggle switch
-toggle.addEventListener('click', ()=>{
-  document.body.classList.toggle('light-mode');
-  toggle.classList.toggle('active');
-  toggleLabel.textContent = toggle.classList.contains('active') ? 'Dark' : 'Light';
-});
+  <footer>
+    <p>© 2025 WhitePEAK Productions — All Rights Reserved.</p>
+    <p>Founder & Developer: <strong>Shreyam Sharma & Saksham Kumar</strong></p>
+  </footer>
 
-// Sign Out
-function signOut(){
-  localStorage.removeItem('savedName');
-  localStorage.removeItem('savedGender');
-  window.location.href = "index.html"; // <-- insert your transfer location
-}
+  <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+  <script>
+    // Replace with your own Supabase project credentials
+    const SUPABASE_URL = "https://gqchuococleviialhzor.supabase.co";
+    const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImdxY2h1b2NvY2xldmlpYWxoem9yIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NDc5MDgsImV4cCI6MjA3ODUyMzkwOH0.5gNWgtXyb4w4B8pyIfpGX71Tb3GLujyf4eN5f8O0PXY";
 
-// Animate sections after welcome text
-window.addEventListener('load', ()=>{
-  setTimeout(()=>{
-    const contentSections = document.getElementById('contentSections');
-    contentSections.style.opacity = 1;
+    const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+    const chatContainer = document.getElementById("chat-messages");
+    const chatForm = document.getElementById("chat-form");
+    const chatInput = document.getElementById("chat-input");
+    const username = localStorage.getItem("username") || "Anonymous";
+    document.getElementById("username-display").textContent = username;
 
-    const events = document.getElementById('eventsSection');
-    events.style.opacity = 1;
-    events.style.transform = "translateY(0)";
-  },3000); // wait for welcome animation
-});
+    // Toggle theme
+    const toggle = document.getElementById("themeToggle");
+    toggle.addEventListener("click", () => {
+      document.body.classList.toggle("light-mode");
+      toggle.classList.toggle("active");
+    });
 
-// Chat functionality
-let messages = [];
+    // Sign out
+    function signOut() {
+      localStorage.removeItem("remember");
+      localStorage.removeItem("username");
+      window.location.href = "index.html";
+    }
 
-// Load chat from localStorage if exists
-if(localStorage.getItem('communityChat')){
-  messages = JSON.parse(localStorage.getItem('communityChat'));
-  renderMessages();
-}
+    // Load messages
+    async function loadMessages() {
+      const { data, error } = await supabaseClient
+        .from("messages")
+        .select("*")
+        .order("created_at", { ascending: true });
+      if (error) console.error(error);
+      chatContainer.innerHTML = "";
+      data.forEach(displayMessage);
+    }
 
-function sendMessage(){
-  const msgText = chatInput.value.trim();
-  if(msgText === "") return;
-  const username = savedName || "Guest";
-  const timestamp = new Date().getTime();
-  const msgObj = {username,msgText,timestamp};
-  messages.push(msgObj);
-  localStorage.setItem('communityChat', JSON.stringify(messages));
-  renderMessages();
-  chatInput.value = "";
-}
+    // Display each message
+    function displayMessage({ username, message }) {
+      const div = document.createElement("div");
+      div.className = "chat-message";
+      if (username === "Shreyam" || username === "Saksham") {
+        div.classList.add("dev");
+        div.innerHTML = `<strong>${username} (DEV)</strong>: ${message}`;
+      } else {
+        div.innerHTML = `<strong>${username}</strong>: ${message}`;
+      }
+      chatContainer.appendChild(div);
+      chatContainer.scrollTop = chatContainer.scrollHeight;
+    }
 
-function renderMessages(){
-  chatMessages.innerHTML = "";
-  const now = new Date().getTime();
-  // Remove messages older than 24h
-  messages = messages.filter(m => now - m.timestamp < 24*60*60*1000);
-  localStorage.setItem('communityChat', JSON.stringify(messages));
-  messages.forEach(msg=>{
-    const div = document.createElement('div');
-    div.classList.add('chat-message');
-    if(msg.username.toLowerCase() === "shreyam") div.classList.add('shreyam');
-    if(msg.username.toLowerCase() === "saksham") div.classList.add('saksham');
-    div.innerHTML = `<span class="username">${msg.username}:</span> ${msg.msgText}`;
-    chatMessages.appendChild(div);
-  });
-  chatMessages.scrollTop = chatMessages.scrollHeight;
-}
-</script>
+    // Send message
+    chatForm.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const text = chatInput.value.trim();
+      if (!text) return;
+      chatInput.value = "";
+      await supabaseClient.from("messages").insert([{ username, message: text }]);
+    });
 
+    // Realtime updates
+    supabaseClient
+      .channel("public:messages")
+      .on(
+        "postgres_changes",
+        { event: "INSERT", schema: "public", table: "messages" },
+        (payload) => displayMessage(payload.new)
+      )
+      .subscribe();
+
+    loadMessages();
+  </script>
 </body>
 </html>
 
