--- a/main.html
+++ b/main.html
@@ -17,6 +17,7 @@
       display: flex;
       flex-direction: column;
       transition: background 0.5s, color 0.5s;
+      overflow-x: hidden;
     }
 
     header {
@@ -76,16 +77,18 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: center;
       text-align: center;
       padding: 40px 20px;
     }
 
     .welcome {
-      font-size: 26px;
+      font-size: 28px;
       font-weight: 600;
-      margin-bottom: 40px;
+      margin-bottom: 50px;
       opacity: 0;
       animation: fadeInUp 2s forwards;
+      animation-delay: 0.3s;
     }
 
     @keyframes fadeInUp {
@@ -98,7 +101,7 @@
       flex-wrap: wrap;
       justify-content: center;
       gap: 20px;
-      margin-bottom: 40px;
+      margin-bottom: 50px;
     }
 
     .section {
@@ -109,11 +112,9 @@
       display: flex; align-items: center; justify-content: center;
       font-size: 20px; font-weight: 600;
       transition: all 0.3s;
-      user-select: none;
-      touch-action: manipulation;
     }
 
-    .section:hover, .section:active {
+    .section:hover {
       transform: scale(1.05);
       background: rgba(255,255,255,0.15);
       box-shadow: 0 0 15px rgba(255,255,255,0.2);
@@ -134,64 +135,21 @@
       font-size: 22px;
     }
 
-    .chat-box {
-      margin-top: 40px;
-      width: 80%;
-      max-width: 800px;
-      background: rgba(255,255,255,0.05);
-      border-radius: 15px;
-      padding: 20px;
-      border: 1px solid rgba(255,255,255,0.1);
-      display: flex;
-      flex-direction: column;
-      max-height: 350px;
-    }
-
-    .messages {
-      flex-grow: 1;
-      overflow-y: auto;
-      margin-bottom: 15px;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-
-    .message {
-      padding: 8px 10px;
-      border-radius: 8px;
-      background: rgba(255,255,255,0.08);
-      text-align: left;
-      word-wrap: break-word;
-    }
-
-    .dev {
-      background: rgba(78,163,255,0.3);
-      border-left: 4px solid #4ea3ff;
-      font-weight: 600;
-    }
-
-    .chat-input {
-      display: flex; gap: 10px;
-    }
-
-    .chat-input input {
-      flex-grow: 1;
-      padding: 8px;
-      border-radius: 6px;
-      border: none;
-      outline: none;
-    }
-
-    .chat-input button {
-      padding: 8px 15px;
-      border: none;
-      background: #4ea3ff;
+    .funny-text {
+      margin-top: 60px;
+      font-size: 26px;
+      font-weight: 700;
       color: white;
-      border-radius: 6px;
-      cursor: pointer;
+      opacity: 0;
+      animation: dramaticFade 3s ease-in-out forwards;
+      animation-delay: 1.5s;
     }
 
-    .chat-input button:hover { background: #1f8bff; }
+    @keyframes dramaticFade {
+      0% { opacity: 0; transform: scale(0.8) rotate(-5deg); }
+      50% { opacity: 1; transform: scale(1.05) rotate(3deg); text-shadow: 0 0 15px #fff; }
+      100% { opacity: 1; transform: scale(1) rotate(0); text-shadow: 0 0 5px #fff; }
+    }
 
     footer {
       background: rgba(0,0,0,0.9);
@@ -205,7 +163,7 @@
     .light-mode { background: #f5f5f5; color: #222; }
     .light-mode header { background: #e0e0e0; color: #222; }
     .light-mode footer { background: #e0e0e0; color: #222; }
-    .light-mode .section, .light-mode .events, .light-mode .chat-box {
+    .light-mode .section, .light-mode .events {
       background: rgba(0,0,0,0.05);
       color: #222;
     }
@@ -241,14 +199,7 @@
       <p>Oops, nothing to see here right now.</p>
     </div>
 
-    <div class="chat-box">
-      <h3>Community Chat</h3>
-      <div class="messages" id="messages"></div>
-      <div class="chat-input">
-        <input type="text" id="messageInput" placeholder="Type your message...">
-        <button onclick="sendMessage()">Send</button>
-      </div>
-    </div>
+    <div class="funny-text"><b>BETTER USE THIS SITE DAILY, MUAHAHAHAHAH</b></div>
   </main>
 
   <footer>
@@ -257,78 +208,27 @@
     <p>Contact: <a href="mailto:whitepeakproductions9811@gmail.com">whitepeakproductions9811@gmail.com</a></p>
   </footer>
 
-  <script type="module">
-    import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
-
-    const SUPABASE_URL = 'https://gqchuococleviialhzor.supabase.co';
-    const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImdxY2h1b2NvY2xldmlpYWxoem9yIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NDc5MDgsImV4cCI6MjA3ODUyMzkwOH0.5gNWgtXyb4w4B8pyIfpGX71Tb3GLujyf4eN5f8O0PXY';
-    const supabase = createClient(SUPABASE_URL, SUPABASE_KEY);
-
-    // Get username from localStorage (fix)
-    let username = localStorage.getItem("username");
-    if (!username || username.trim() === "") {
-      username = prompt("Enter your name:") || "Guest";
-      localStorage.setItem("username", username);
-    }
+  <script>
+    // Display username from localStorage
+    const username = localStorage.getItem("username") || "Anonymous";
     document.getElementById("userDisplay").textContent = "Logged in as: " + username;
 
-    // Theme toggle
+    // Toggle Light/Dark Mode
     const toggle = document.getElementById("themeToggle");
     toggle.addEventListener("click", () => {
       document.body.classList.toggle("light-mode");
       toggle.classList.toggle("active");
-      localStorage.setItem("theme", document.body.classList.contains("light-mode") ? "light" : "dark");
     });
 
-    // Keep saved theme
-    if (localStorage.getItem("theme") === "light") {
-      document.body.classList.add("light-mode");
-      toggle.classList.add("active");
-    }
-
-    // Load messages
-    async function loadMessages() {
-      const { data } = await supabase.from("messages").select("*").order("created_at", { ascending: true });
-      const container = document.getElementById("messages");
-      container.innerHTML = "";
-      data.forEach(addMessageToDOM);
-      container.scrollTop = container.scrollHeight;
-    }
-
-    function addMessageToDOM(msg) {
-      const div = document.createElement("div");
-      div.className = "message";
-      if (msg.username === "Shreyam" || msg.username === "Saksham") {
-        div.classList.add("dev");
-        msg.username += " (DEV)";
-      }
-      div.innerHTML = `<strong>${msg.username}:</strong> ${msg.content}`;
-      document.getElementById("messages").appendChild(div);
-    }
-
-    async function sendMessage() {
-      const input = document.getElementById("messageInput");
-      const content = input.value.trim();
-      if (!content) return;
-      await supabase.from("messages").insert([{ username, content }]);
-      input.value = "";
-    }
-
-    // Live chat updates
-    supabase.channel('public:messages')
-      .on('postgres_changes', { event: 'INSERT', schema: 'public', table: 'messages' }, payload => {
-        addMessageToDOM(payload.new);
-        document.getElementById("messages").scrollTop = document.getElementById("messages").scrollHeight;
-      })
-      .subscribe();
-
+    // Sign Out Function
     function signOut() {
       localStorage.removeItem("username");
-      location.href = "index.html";
+      localStorage.removeItem("password");
+      localStorage.removeItem("rememberMe");
+      window.location.href = "index.html";
     }
-
-    loadMessages();
   </script>
+
 </body>
 </html>
 
