--- a/main.html
+++ b/main.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WhitePEAK Portal</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <style>
     * {
-      margin: 0; padding: 0; box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
       font-family: 'Poppins', sans-serif;
     }
 
@@ -21,56 +24,102 @@
     }
 
     header {
-      display: flex; justify-content: space-between; align-items: center;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       padding: 15px 25px;
       background: rgba(0, 0, 0, 0.9);
-      box-shadow: 0 2px 10px rgba(255,255,255,0.1);
-      position: sticky; top: 0; z-index: 1000;
+      box-shadow: 0 2px 10px rgba(255, 255, 255, 0.1);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
 
     header img {
-      height: 45px; border-radius: 10px;
+      height: 45px;
+      border-radius: 10px;
+      object-fit: contain;
     }
 
-    header .center-text {
-      text-align: center; flex-grow: 1;
+    .center-text {
+      text-align: center;
+      flex-grow: 1;
+      animation: fadeIn 2s ease forwards;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     header h1 {
-      font-size: 18px; font-weight: 600;
+      font-size: 18px;
+      font-weight: 600;
     }
 
     header p {
-      font-size: 12px; color: #bbb; font-style: italic;
+      font-size: 12px;
+      color: #bbb;
+      font-style: italic;
+      margin-top: 3px;
     }
 
     .toggle-container {
-      position: absolute; top: 18px; right: 100px;
-      display: flex; align-items: center; gap: 6px;
+      position: absolute;
+      top: 18px;
+      right: 100px;
+      display: flex;
+      align-items: center;
+      gap: 6px;
     }
 
     .toggle {
-      width: 40px; height: 20px; background: #444; border-radius: 20px;
-      position: relative; cursor: pointer; transition: background 0.3s;
+      width: 40px;
+      height: 20px;
+      background: #444;
+      border-radius: 20px;
+      position: relative;
+      cursor: pointer;
+      transition: background 0.3s;
     }
 
     .toggle::before {
-      content: ""; position: absolute; top: 2px; left: 2px;
-      width: 16px; height: 16px; background: white; border-radius: 50%;
+      content: "";
+      position: absolute;
+      top: 2px;
+      left: 2px;
+      width: 16px;
+      height: 16px;
+      background: white;
+      border-radius: 50%;
       transition: transform 0.3s;
     }
 
-    .toggle.active { background: #4ea3ff; }
-    .toggle.active::before { transform: translateX(20px); }
-
-    .signout-btn {
-      position: absolute; top: 15px; right: 25px;
-      background: #ff4d4d; border: none; color: white;
-      padding: 6px 10px; border-radius: 6px;
-      cursor: pointer; font-size: 13px;
+    .toggle.active {
+      background: #4ea3ff;
     }
 
-    .signout-btn:hover { background: #ff1a1a; }
+    .toggle.active::before {
+      transform: translateX(20px);
+    }
+
+    .signout-btn {
+      position: absolute;
+      top: 15px;
+      right: 25px;
+      background: #ff4d4d;
+      border: none;
+      color: white;
+      padding: 6px 10px;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 13px;
+      transition: background 0.3s;
+    }
+
+    .signout-btn:hover {
+      background: #ff1a1a;
+    }
 
     main {
       flex-grow: 1;
@@ -102,32 +151,38 @@
       justify-content: center;
       gap: 20px;
       margin-bottom: 50px;
+      max-width: 1000px;
     }
 
     .section {
-      width: 250px; height: 120px;
+      width: 250px;
+      height: 120px;
       background: rgba(255, 255, 255, 0.05);
-      border: 1px solid rgba(255,255,255,0.1);
+      border: 1px solid rgba(255, 255, 255, 0.1);
       border-radius: 12px;
-      display: flex; align-items: center; justify-content: center;
-      font-size: 20px; font-weight: 600;
-      transition: all 0.3s;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 20px;
+      font-weight: 600;
+      transition: all 0.3s ease;
+      cursor: pointer;
     }
 
     .section:hover {
       transform: scale(1.05);
-      background: rgba(255,255,255,0.15);
-      box-shadow: 0 0 15px rgba(255,255,255,0.2);
+      background: rgba(255, 255, 255, 0.15);
+      box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
     }
 
     .events {
       margin-top: 30px;
       padding: 20px;
-      background: rgba(255,255,255,0.05);
+      background: rgba(255, 255, 255, 0.05);
       border-radius: 15px;
       width: 80%;
       max-width: 800px;
-      border: 1px solid rgba(255,255,255,0.1);
+      border: 1px solid rgba(255, 255, 255, 0.1);
     }
 
     .events h3 {
@@ -152,27 +207,64 @@
     }
 
     footer {
-      background: rgba(0,0,0,0.9);
+      background: rgba(0, 0, 0, 0.9);
       color: #bbb;
       text-align: center;
       padding: 15px;
       font-size: 14px;
-      border-top: 1px solid rgba(255,255,255,0.1);
+      border-top: 1px solid rgba(255, 255, 255, 0.1);
     }
 
-    .light-mode { background: #f5f5f5; color: #222; }
-    .light-mode header { background: #e0e0e0; color: #222; }
-    .light-mode footer { background: #e0e0e0; color: #222; }
-    .light-mode .section, .light-mode .events {
-      background: rgba(0,0,0,0.05);
+    /* Light Mode */
+    .light-mode {
+      background: #f5f5f5;
       color: #222;
+    }
+
+    .light-mode header,
+    .light-mode footer {
+      background: #e0e0e0;
+      color: #222;
+    }
+
+    .light-mode .section,
+    .light-mode .events {
+      background: rgba(0, 0, 0, 0.05);
+      color: #222;
+      border-color: rgba(0, 0, 0, 0.1);
+    }
+
+    .light-mode .toggle {
+      background: #ccc;
+    }
+
+    .light-mode .toggle.active {
+      background: #007bff;
+    }
+
+    .light-mode .funny-text {
+      color: #222;
+    }
+
+    @media (max-width: 768px) {
+      .toggle-container { right: 80px; }
+      .signout-btn { right: 15px; font-size: 12px; padding: 5px 8px; }
+      .welcome { font-size: 24px; }
+      .section { width: 220px; height: 100px; font-size: 18px; }
+    }
+
+    @media (max-width: 480px) {
+      header { flex-direction: column; padding: 10px; }
+      .center-text { margin: 10px 0; }
+      .toggle-container { position: static; margin: 10px 0; }
+      .signout-btn { position: static; margin-top: 10px; }
     }
   </style>
 </head>
 <body>
 
   <header>
-    <img src="LOGO.jpg.png" alt="WhitePEAK Logo">
+    <img src="logo.png" alt="WhitePEAK Logo" onerror="this.src='https://via.placeholder.com/45?text=WP'" />
     <div class="center-text">
       <h1>NOTHING YOU NEED TO REMEMBER</h1>
       <p id="userDisplay">Logged in as: ...</p>
@@ -205,30 +297,49 @@
   <footer>
     <p>© 2025 WhitePEAK Productions — All Rights Reserved.</p>
     <p>Founder & Developer: <strong>Shreyam Sharma & Saksham Kumar</strong></p>
-    <p>Contact: <a href="mailto:whitepeakproductions9811@gmail.com">whitepeakproductions9811@gmail.com</a></p>
+    <p>Contact: <a href="mailto:whitepeakproductions9811@gmail.com" style="color: #4ea3ff;">whitepeakproductions9811@gmail.com</a></p>
   </footer>
 
   <script>
-    // Display username from localStorage
-    const username = localStorage.getItem("username") || "Anonymous";
-    document.getElementById("userDisplay").textContent = "Logged in as: " + username;
+    // === USER AUTHENTICATION ===
+    const username = localStorage.getItem("username");
+    const userDisplay = document.getElementById("userDisplay");
 
-    // Toggle Light/Dark Mode
+    if (!username || username.trim() === "") {
+      window.location.href = "intro.html";
+    } else {
+      userDisplay.textContent = "Logged in as: " + username;
+    }
+
+    // === THEME TOGGLE (Persistent) ===
     const toggle = document.getElementById("themeToggle");
+    const body = document.body;
+
+    // Load saved theme
+    if (localStorage.getItem("theme") === "light") {
+      body.classList.add("light-mode");
+      toggle.classList.add("active");
+    }
+
     toggle.addEventListener("click", () => {
-      document.body.classList.toggle("light-mode");
+      body.classList.toggle("light-mode");
       toggle.classList.toggle("active");
+
+      // Save preference
+      const isLight = body.classList.contains("light-mode");
+      localStorage.setItem("theme", isLight ? "light" : "dark");
     });
 
-    // Sign Out Function
+    // === SIGN OUT ===
     function signOut() {
-      localStorage.removeItem("username");
-      localStorage.removeItem("password");
-      localStorage.removeItem("rememberMe");
-      window.location.href = "index.html";
+      if (confirm("Are you sure you want to sign out?")) {
+        localStorage.removeItem("username");
+        localStorage.removeItem("password");
+        localStorage.removeItem("rememberMe");
+        window.location.href = "index.html";
+      }
     }
   </script>
 
 </body>
 </html>
-
